force-app/main/default/objects/Referral_Reason__c/Referral_Reason__c.object-meta.xml
<CustomObject>
    <label>Referral Reason</label>
    <nameField>
        <label>Referral Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>