force-app/main/default/objects/Referral_Reason__c/fields/Assessment_Category__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Credit assessment outcome category</description>
    <label>Assessment Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>