force-app/main/default/objects/Referral_Reason__c/fields/Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Authority_Level__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Assessor authority level required to resolve the referral</description>
    <label>Authority Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>