force-app/main/default/objects/Referral_Reason__c/fields/Authority_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Authority_Level_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Code corresponding to authority level</description>
    <formula>IF( UPPER(Authority_Level__c)  = &quot;NO_CAD&quot;, 1,
IF( UPPER(Authority_Level__c)  = &quot;CAD_A&quot;, 2,
IF( UPPER(Authority_Level__c)  = &quot;CAD_B&quot;, 3,
IF( UPPER(Authority_Level__c)  = &quot;CAD_C&quot;, 4,
IF( UPPER(Authority_Level__c)  = &quot;CAD_D&quot;, 5, NULL)))))</formula>
    <label>Authority Level Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>