force-app/main/default/objects/Referral_Reason__c/fields/Guidance_Code__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Codes to guide assessor on actions to take to resolve the referral</description>
    <label>Guidance Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>