force-app/main/default/objects/Referral_Reason__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Credit assessment outcome reason code</description>
    <externalId>true</externalId>
    <label>Reason Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>