force-app/main/default/objects/Referral_Reason__c/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Credit assessment outcome reason description</description>
    <label>Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>